@@ -3,6 +3,11 @@
 
 #ifdef MACH_KERNEL
 
+#include <sys/types.h>
+
+#include <device/device_types.h>
+#include <device/io_req.h>
+
 io_return_t kmsgopen (dev_t dev, int flag, io_req_t ior);
 io_return_t kmsgclose (dev_t dev, int flag);
 io_return_t kmsgread (dev_t dev, io_req_t ior);
